# F4SEPlugins

./: README.md  achievements.sln  f4ee.sln  hudextension.sln  survivalunlock.sln  tagpatch.sln
AS3/: LooksMenu.fla  LooksMenu_standard.fla  LooksMenu_widescreen.fla
AS3/Common/Mobile/ScrollList/: EventWithParams.as  FlashUtil.as  MobileListItemRenderer.as  MobileScrollList.as
AS3/Common/Shared/: BGSExternalInterface.as  IMenu.as  PlatformChangeEvent.as  PlatformRequestEvent.as
AS3/Common/Shared/AS3/: BSBracketClip.as  BSButtonHint.as  BSButtonHintBar.as  BSButtonHintData.as  BSScrollingList.as  BSScrollingListEntry.as  BSUIComponent.as  ListFilterer.as  _BSScrollingList.as
AS3/Common/Shared/AS3/COMPANIONAPP/: BSScrollingListInterface.as  CompanionAppMode.as  MobileButtonHint.as  MobileScrollListProperties.as
AS3/Common/utils/: ColorFunctions.as  Debug.as  Translator.as
AS3/HUDExtension/: HUDExtension.as  HUDExtension.fla  IHUDObject.as  Nameplate.as  NameplateEvent.as  ObjectLoader.as
AS3/HUDExtension/Nameplate/: MeterBar.as
AS3/LooksMenu/: FeatureList.as  FeatureListEntry.as  HSVEvent.as  HSVGroup.as  LooksMenu.as  LooksMenuOptionStepper.as  Option_Scrollbar.as  RotationIcon.as  ScaleIcon.as  SlideIcon.as
achievements/: achievements.rc  achievements.vcxproj  main.cpp
f4ee/: ActorUpdateManager.cpp  ActorUpdateManager.h  BodyGen.cpp  BodyGen.h  BodyGenInterface.cpp  BodyGenInterface.h  BodyMorphInterface.cpp  BodyMorphInterface.h  CMakeLists.txt  CMakeSettings.json  CharGen.cpp  CharGen.h  CharGenInterface.cpp  CharGenInterface.h  CharGenTint.cpp  CharGenTint.h  GameAllocator.h  Morpher.cpp  Morpher.h  OverlayInterface.cpp  OverlayInterface.h  PapyrusBodyGen.cpp  PapyrusBodyGen.h  PapyrusOverlays.cpp  PapyrusOverlays.h  ScaleformNatives.cpp  ScaleformNatives.h  SkinInterface.cpp  SkinInterface.h  StringTable.cpp  StringTable.h  TransformInterface.cpp  TransformInterface.h  Utilities.cpp  Utilities.h  exports.def  f4ee.vcxproj  f4ee.vcxproj.filters  main.cpp
f4ee/cmake/: installation.cmake
f4ee/jsoncpp/: jsoncpp.vcxproj  jsoncpp.vcxproj.filters
hudextension/: HUDExtension.cpp  HUDExtension.h  exports.def  hudextension.rc  hudextension.vcxproj  hudextension.vcxproj.filters  hudextension_vc14.vcxproj  hudextension_vc14.vcxproj.filters  main.cpp  resource.h
survivalunlock/: exports.def  main.cpp  resource.h  survivalunlock.rc  survivalunlock.vcxproj  survivalunlock.vcxproj.filters
tagpatch/: Pattern.cpp  Pattern.h  exports.def  main.cpp  tagpatch.vcxproj
